--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asttokens==2.4.0
 backcall==0.2.0
-#-e git+https://github.com/arun-v-13/Bloob.git@105791609e01752bb3ed48875b5ac3a0f2fb96d4#egg=bloob
+#-e git+https://github.com/arun-v-13/Bloob.git@0228a089004ed4c7644e7a8b327af8e349e17bb0#egg=bloob
+catboost==1.2.2
 colorama==0.4.6
 comm==0.1.4
 contourpy==1.1.1
@@ -8,8 +9,10 @@ cycler==0.11.0
 DateTime==5.2
 debugpy==1.8.0
 decorator==5.1.1
+dill==0.3.7
 executing==1.2.0
 fonttools==4.42.1
+graphviz==0.20.1
 ipykernel==6.25.2
 ipython==8.15.0
 jedi==0.19.0
@@ -27,6 +30,7 @@ parso==0.8.3
 pickleshare==0.7.5
 Pillow==10.0.1
 platformdirs==3.10.0
+plotly==5.17.0
 prompt-toolkit==3.0.39
 psutil==5.9.5
 pure-eval==0.2.2
@@ -42,10 +46,12 @@ seaborn==0.12.2
 six==1.16.0
 sklearn==0.0.post9
 stack-data==0.6.2
+tenacity==8.2.3
 threadpoolctl==3.2.0
 tornado==6.3.3
 traitlets==5.10.0
 tzdata==2023.3
 wcwidth==0.2.6
+xgboost==2.0.0
 zope.interface==6.0
 #-e .
